[package]
name = "qvisor"
version = "0.1.0"
authors = ["sunyulin728 <sunyulin728@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
kvm-bindings = "0.1"
kvm-ioctls = "0.1.0"
xmas-elf = { git = "https://github.com/gz/xmas-elf.git" }
x86_64 = "0.3.4"
memmap = "0.7.0"
ux = "0.1.2"
byteorder = "1.3.2"
spin = "0.5.0"
rusty-asm = "0.2.1"
rand = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]